# ROS-implementation

./: README.md
Lidar-Camera-thermal/: README.md  lidar_camera_thermal-node.md  lidar_node.py  package.xml  thermal_camera_node.py
Lidar-Camera-thermal/msg/: TargetPosition.msg
geolocation/: goals.md  testing_implementation.md
